Set body's display to grid to avoid overflowing

--- a/style.css
+++ b/style.css
@@ -12,15 +12,13 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
 }
-
 
 /* header start */
 
@@ -44,8 +42,10 @@ header {
 
 main {
     background-color: var(--gray);
-    height: 100%;
+    height: 84.9vh;
     padding: 25px;
+    box-sizing: border-box;
+    
 }
 
 .btn-container {
@@ -103,7 +103,7 @@ button {
 
 }
 
-.title-card {
+.book-item > h2 {
     font-size: 2.5rem;
 }
 
@@ -112,8 +112,8 @@ button {
 }
 
 button.delete {
-    background-color: var(--blue);
-    color: var(--black);
+    background-color: var(--black);
+    color: var(--light-white);
     height: 2.5rem;
     border-radius: 10px;
     border-style: none;
@@ -122,16 +122,28 @@ button.delete {
 }
 
 button.delete:hover {
-    background-color: #0077b6db;
+    background-color: #1c1917e5
 }
 
 .status-btn {
+    color: var(--light-white);
     height: 2.5rem;
     border-radius: 10px;
     border-style: none;
     font-size: 1.3rem;
     font-weight: 800;
+    width: 100%;
 }
+
+.read-color {
+    background-color: var(--green);
+}
+
+.progress-color {
+    background-color: var(--red);
+}
+
+
 
 
 /* end of book-item cards */
